fix cors in websocket plugin